--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.1",
     "inquirer": "^8.2.4",
     "mysql2": "^2.3.3",
-    "nodemon": "^2.0.16"
+    "nodemon": "^2.0.16",
+    "sync-sql": "^1.0.2"
   }
 }
